--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -136,7 +136,6 @@
             </div>
         </header>
         <div class="clearfix"></div>
-
         <br>
 
 
@@ -148,9 +147,10 @@
             </p>
 
             <p>
-                Brucella neotomae BNWLG2-S2 was isolated from the urine of a 49 year-old female who presented to a clinic in Pennsylvania on April 26th 2016 with symptoms indicative of a UTI. It harbors mcr-1 and blaCTX-M on a Novel IncF Plasmid, First report of mcr-1 in the USA.
+                {{meta.comments}}
             </p>
         </section>
+        <br>
 
 
         <section>
@@ -188,6 +188,7 @@
                 </tbody>
             </table>
         </section>
+        <br>
 
         <section>
             <h2>Genome Annotation</h2>
@@ -257,7 +258,7 @@
 
             <img src="../{{meta.genome_id}}/{{meta.genome_id}}-circular.png" class="circular-fig" />
         </section>
-
+        <br>
 
 
         <section>
@@ -269,6 +270,7 @@
                 The reasons affecting the quality of genome are: [genome qc flags].
             </p>
         </section>
+        <br>
 
 
 
@@ -299,6 +301,7 @@
                 </tbody>
             </table>
         </section>
+        <br>
 
 
 
@@ -340,6 +343,7 @@
 
             <img src="../{{meta.genome_id}}/{{meta.genome_id}}-subsystem.svg" class="subsystem-fig" />
         </section>
+        <br>
 
 
         <section>
