remove breaks; cleanup

--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -10,6 +10,9 @@
                 font-family: 'Work Sans', sans-serif;
                 color: #444;
             }
+            header { padding-bottom: .5in; }
+            section { margin-bottom: .5in; }
+
             a {
                 text-decoration: none;
                 color: #0d78ef;
@@ -91,8 +94,6 @@
                 margin-right: .2in;
             }
 
-            .circular-fig {}
-
             .subsystem-fig {
                 width: 1300px;
                 height: 600px;
@@ -120,7 +121,7 @@
 
     </head>
     <body>
-        <header style="width: 100%">
+        <header>
             <div class="pull-left">
                 <img src="../../patric-logo.svg" class="logo pull-left">
                 <div class="title pull-left">Genome Report</div>
@@ -132,7 +133,7 @@
             </div>
         </header>
         <div class="clearfix"></div>
-        <br>
+
 
 
         <section>
@@ -146,7 +147,7 @@
                 {{meta.comments}}
             </p>
         </section>
-        <br>
+
 
 
         <section>
@@ -184,7 +185,8 @@
                 </tbody>
             </table>
         </section>
-        <br>
+
+
 
         <section>
             <h2>Genome Annotation</h2>
@@ -198,7 +200,6 @@
             </p>
 
             <div style="width: 80%;" class="center-table"><i>{{getTaxonomy}}</i></div><br>
-
 
             <p>
                 The annotations includes 3349 CDS, 50 tRNAs and 3 rRNAs.
@@ -226,8 +227,6 @@
                 </tbody>
             </table>
 
-            <div class="clearfix"></div>
-            <br>
 
             <table class="med-table kv-table-2 center-table">
                 <thead class="table-header">
@@ -244,9 +243,6 @@
                 </tbody>
             </table>
 
-            <div class="clearfix"></div>
-            <br>
-
             <p>
                 A graphical display of the distribution of the CDS on each strand, the repeat_regions,
                 GC content and GC skew are provided (Figure 1).
@@ -254,7 +250,6 @@
 
             <img src="../{{meta.genome_id}}/{{meta.genome_id}}-circular.svg" class="circular-fig" />
         </section>
-        <br>
 
 
         <section>
@@ -266,8 +261,6 @@
                 The reasons affecting the quality of genome are: [genome qc flags].
             </p>
         </section>
-        <br>
-
 
 
         <section>
@@ -297,7 +290,6 @@
                 </tbody>
             </table>
         </section>
-        <br>
 
 
 
@@ -322,7 +314,6 @@
 
             [Incomplete]
         </section>
-        <br>
         {{/amr}}
 
 
@@ -340,7 +331,6 @@
             <img src="../{{meta.genome_id}}/{{meta.genome_id}}-subsystem.svg" class="subsystem-fig" />
 
         </section>
-        <br>
 
 
         <section>
@@ -367,7 +357,7 @@
                 The trimmed alignments are concatenated and this concatenated alignment is
                 used to build the main tree with either RAxML or FastTree.
             </p>
-            <br>
+
 
             <h3>Comparison to Reference Genomes in the Same Genus</h3>
             <img src="../{{meta.genome_id}}/{{meta.genome_id}}-tree.svg" class="tree-fig" />
