--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -42,6 +42,10 @@
                 page-break-inside: avoid;
             }
 
+            table-num {
+                font-weight: 600;
+            }
+
             /* standard key-value table (single or 2 columns)*/
             .kv-table,
             .kv-table-2 {
@@ -51,7 +55,17 @@
             .kv-table td:first-child,
             .kv-table-2 td:first-child,
             .kv-table-2 td:nth-child(3) {
-                font-weight: 600;
+                font-weight: 700;
+
+            }
+
+            .kb-table-2 td {
+                border-collapse: separate;
+                border-spacing: 0px 50px;
+            }
+
+            table td.align-right {
+                text-align: right;
             }
 
             .table-header {
@@ -63,11 +77,12 @@
             .row-header { border-bottom: 1px solid #196E9C; font-weight: 600;}
             th, td { padding: 5px; }
             th  { border-bottom: 2px solid #196E9C; }
-            tr { border-bottom: 1px solid #aaa; }
+            tr:last-child { border-bottom: 1px solid #196E9C; }
 
-            .large-table { width: 80%; }
+            .lg-table { width: 80%; }
             .med-table { width: 60%; }
-            .small-table { width: 40%; }
+            .sm-table { width: 40%; }
+            .xs-table {width: 20%; }
 
             .center-table { margin-left: auto; margin-right: auto; }
 
@@ -154,32 +169,45 @@
             <h2>Genome Assembly</h2>
             <p>
                 Brucella neotomae BNWLG2-S2 ran under job ID 2fee1c1b-f8bb-4781-bb20-f08fa66398e1 at PATRIC (1).  The assembly job started at 10/6/17, 2:53 PM and completed at 10/7/17, 4:41 PM, after 25h 47m 90011s.  The auto assembly strategy was selected, and it runs BayesHammer [2] on short reads, followed by three assembly strategies that include Velvet [3], IDBA [4] and Spades [5], each of which is given an assembly score by ARAST, an in-house script. The minimum contig length was 120bp, and smaller contigs were not included in the assembly. The minimum contig coverage was 5, and contigs with less coverage were not included in the assembly.
-                Also add reference to QUAST. ARAST ranked the Spades assembly best (Table 1).
+                Also add reference to QUAST. ARAST ranked the Spades assembly best (<table-ref></table-ref>).
             </p>
             <p>
-                The assembled genome has 33 contigs, with the total length of 3.31 Mbp and %GC of 57.26%.
+                The assembled genome has {{meta.contigs}} contigs, with the total length of 3.31 Mbp and %GC of {{meta.gc_content}}%.
             </p>
 
-            <table class="large-table kv-table-2 center-table">
+
+            <table class="lg-table kv-table-2 center-table">
+
                 <thead class="table-header">
-                    <tr><th colspan="4">Table 1. Assembly details for {{meta.genome_name}}</th></tr>
+                    <tr>
+                        <th colspan="4">
+                            <table-num></table-num> Assembly details for {{meta.genome_name}}
+                        </th>
+                    </tr>
                 </thead>
 
                 <tbody>
                     <tr>
-                        <td>Contigs</td><td>{{meta.contigs}}</td>
-                        <td>GC Content</td><td>{{meta.gc_content}}</td>
+                        <td>Contigs</td>
+                        <td class="align-right">{{meta.contigs}}</td>
+                        <td>GC Content</td>
+                        <td class="align-right">{{meta.gc_content}}</td>
                     </tr>
                     <tr>
-                        <td>Plasmids</td><td>{{meta.plasmids}}</td>
-                        <td>Contig L50</td><td>{{meta.contig_l50}}</td>
+                        <td>Plasmids</td>
+                        <td class="align-right">{{meta.plasmids}}</td>
+                        <td>Contig L50</td>
+                        <td class="align-right">{{meta.contig_l50}}</td>
                     </tr>
                     <tr>
-                        <td>Genome Length</td><td>{{meta.genome_length}}</td>
-                        <td>Contig N50</td><td>{{meta.contig_n50}}</td>
+                        <td>Genome Length</td>
+                        <td class="align-right">{{meta.genome_length}}</td>
+                        <td>Contig N50</td>
+                        <td class="align-right">{{meta.contig_n50}}</td>
                     </tr>
                     <tr>
-                        <td>Chromosomes</td><td>{{meta.chromosomes}}</td>
+                        <td>Chromosomes</td>
+                        <td class="align-right">{{meta.chromosomes}}</td>
                         <td></td><td></td>
                     </tr>
                 </tbody>
@@ -203,51 +231,56 @@
 
             <p>
                 The annotations includes 3349 CDS, 50 tRNAs and 3 rRNAs.
-                All annotated genome features for this genome are summarized in Table 2.
+                All annotated genome features for this genome are summarized in <table-ref></table-ref>.
             </p>
 
             <p>
                 The functional annotation included 655 hypothetical proteins and 2694 proteins with functional assignments.
                 Furthermore, 963 proteins were  assigned EC numbers and 749 proteins were mapped to KEGG pathways.
-                A breakdown of the proteins that have been annotated for this isolate is provided in Table 3.
+                A breakdown of the proteins that have been annotated for this isolate is provided in <table-ref></table-ref>.
             </p>
 
-            <table class="small-table kv-table-2 center-table">
+            <table class="sm-table kv-table center-table">
                 <thead class="table-header">
                     <tr>
-                        <th colspan="2">Table 2. Annotated Genome Features</th>
+                        <th colspan="2"><table-num></table-num> Annotated Genome Features</th>
                     </tr>
                 </thead>
 
                 <tbody>
-                    <tr class="row-header"><td></td> <td>PATRIC</td></tr>
+                    <tr class="row-header"><td></td> <td class="align-right">Count</td></tr>
                     {{#annotationMeta}}
-                    <tr><td>{{name}}</td><td>{{count}}</td></tr>
+                        <tr>
+                            <td>{{name}}</td><td class="align-right">{{count}}</td>
+                        </tr>
                     {{/annotationMeta}}
                 </tbody>
             </table>
 
 
-            <table class="med-table kv-table-2 center-table">
+            <table class="med-table kv-table center-table">
                 <thead class="table-header">
                     <tr>
-                        <th colspan="2">Table 3. Protein Features</th>
+                        <th colspan="2"><table-num></table-num> Protein Features</th>
                     </tr>
                 </thead>
 
                 <tbody>
-                    <tr class="row-header"><td></td> <td>PATRIC</td></tr>
+                    <tr class="row-header"><td></td> <td class="align-right">Count</td></tr>
                     {{#proteinFeatures}}
-                    <tr><td>{{name}}</td><td>{{count}}</td></tr>
+                    <tr>
+                        <td>{{name}}</td><td class="align-right">{{count}}</td>
+                    </tr>
                     {{/proteinFeatures}}
                 </tbody>
             </table>
 
             <p>
                 A graphical display of the distribution of the CDS on each strand, the repeat_regions,
-                GC content and GC skew are provided (Figure 1).
+                GC content and GC skew are provided (<fig-ref></fig-ref>).
             </p>
 
+            <fig-num></fig-num>
             <img src="../{{meta.genome_id}}/{{meta.genome_id}}-circular.svg" class="circular-fig" />
         </section>
 
@@ -268,13 +301,13 @@
             <p>
                 PATRIC [1] annotation also includes identification of proteins that have homology to
                 known virulence factors, drug targets, and antibiotic resistance genes (Reference
-                the sources).  A breakdown of the distribution is provided (Table 4).
+                the sources).  A breakdown of the distribution is provided (<table-ref></table-ref>).
             </p>
 
-            <table class="med-table kv-table center-table">
+            <table class="sm-table kv-table center-table">
                 <thead class="table-header">
                     <tr>
-                        <th colspan="3">Table 4. Annotated Genome Features</th>
+                        <th colspan="3"><table-num></table-num> Annotated Genome Features</th>
                     </tr>
                 </thead>
 
@@ -284,7 +317,7 @@
                     <tr>
                         <td>{{type}}</td>
                         <td>{{source}}</td>
-                        <td>{{genes}}</td>
+                        <td class="align-right">{{genes}}</td>
                     </tr>
                     {{/specialtyGenes}}
                 </tbody>
@@ -296,10 +329,10 @@
         {{#amr}}
         <section>
             <h2>Antimicrobial Resistance Analysis</h2>
-            <table class="large-table kv-table-2 center-table">
+            <table class="lg-table kv-table center-table">
                 <thead class="table-header">
                     <tr>
-                        <th colspan="2">Table 5. Antimicrobial Resistance</th>
+                        <th colspan="2"><table-num></table-num> Antimicrobial Resistance</th>
                     </tr>
                 </thead>
 
@@ -325,9 +358,10 @@
                 represent the collection of functional roles that make up a metabolic pathway, a complex
                 (e.g., the ribosome), or a class of proteins (e.g., two-component signal-transduction
                 proteins or AMR genes) [Overbeek].  An overview of the subsystems for this genome
-                is provided in Figure 2.
+                is provided in <fig-ref></fig-ref>.
             </p>
 
+            <fig-num></fig-num>
             <img src="../{{meta.genome_id}}/{{meta.genome_id}}-subsystem.svg" class="subsystem-fig" />
 
         </section>
@@ -360,6 +394,8 @@
 
 
             <h3>Comparison to Reference Genomes in the Same Genus</h3>
+
+            <fig-num></fig-num>
             <img src="../{{meta.genome_id}}/{{meta.genome_id}}-tree.svg" class="tree-fig" />
         </section>
     </body>
