--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -42,7 +42,10 @@
                 page-break-inside: avoid;
             }
 
-            table-num {
+            table-num,
+            table-ref,
+            fig-num,
+            fig-ref {
                 font-weight: 600;
             }
 
@@ -87,7 +90,7 @@
             .center-table { margin-left: auto; margin-right: auto; }
 
             .logo {
-                width: 200px;
+                width: 3in;
                 border-right: 3px solid #444;
                 padding-right: 10px;
                 margin-right: 10px;
