--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -59,7 +59,6 @@
             .kv-table-2 td:first-child,
             .kv-table-2 td:nth-child(3) {
                 font-weight: 700;
-
             }
 
             .kb-table-2 td {
@@ -75,6 +74,7 @@
                 color: #fff;
                 background: #196E9C;
                 padding: 5px;
+                text-align: left;
             }
             .table-header th { font-weight: 400; }
             .row-header { border-bottom: 1px solid #196E9C; font-weight: 600;}
@@ -329,7 +329,7 @@
 
 
 
-        {{#amr}}
+        {{#amr}} <!-- only shown if data is available -->
         <section>
             <h2>Antimicrobial Resistance Analysis</h2>
             <table class="lg-table kv-table center-table">
@@ -405,9 +405,42 @@
 
 
             <h3>Comparison to Reference Genomes in the Same Genus</h3>
-
             <fig-num></fig-num>
             <img src="../{{meta.genome_id}}/{{meta.genome_id}}-tree.svg" class="tree-fig" />
         </section>
+
+
+        <section>
+            <h2>Unique Protein Families</h2>
+
+            <p>
+                In <table-ref></table-ref> we present protein families that the isolate has which
+                all reference genomes lack.
+            </p>
+
+
+            <table class="lg-table center-table">
+                <thead class="table-header">
+                    <tr>
+                        <th colspan="3"><table-num></table-num> Core Protein Families Missing in the Genome</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr class="row-header">
+                        <td>Protein Family ID</td>
+                        <td>Description</td>
+                    </tr>
+                    {{#proteinFamily}}
+                    <tr>
+                        <td>{{family_id}}</td>
+                        <td>{{family_product}}</td>
+                    </tr>
+                    {{/proteinFamily}}
+                </tbody>
+            </table>
+
+        </section>
+
     </body>
 </html>
